tests/snapshots/snapshot_expansion_tests__exp_receipt_outcome_failed.snap
---
source: tests/snapshot_expansion_tests.rs
expression: r
---
{
  "meta": {
    "run_id": "aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee",
    "work_order_id": "11111111-2222-3333-4444-555555555555",
    "contract_version": "abp/v0.1",
    "started_at": "2025-06-01T10:00:00Z",
    "finished_at": "2025-06-01T10:05:00Z",
    "duration_ms": 100
  },
  "backend": {
    "id": "mock",
    "backend_version": null,
    "adapter_version": null
  },
  "capabilities": {},
  "mode": "mapped",
  "usage_raw": {},
  "usage": {
    "input_tokens": null,
    "output_tokens": null,
    "cache_read_tokens": null,
    "cache_write_tokens": null,
    "request_units": null,
    "estimated_cost_usd": null
  },
  "trace": [],
  "artifacts": [],
  "verification": {
    "git_diff": null,
    "git_status": null,
    "harness_ok": false
  },
  "outcome": "failed",
  "receipt_sha256": null
}
