tests/snapshots/snapshot_expansion_tests__exp_verification_report_full.snap
---
source: tests/snapshot_expansion_tests.rs
expression: v
---
{
  "git_diff": "+new\n-old",
  "git_status": "M file.rs\nA new.rs\nD old.rs",
  "harness_ok": true
}
