tests/snapshots/snapshot_expansion_tests__ws_passthrough.snap
---
source: tests/snapshot_expansion_tests.rs
expression: passthrough
---
{
  "root": ".",
  "mode": "pass_through",
  "include": [],
  "exclude": []
}
