tests/snapshots/snapshot_expansion_tests__ws_staged.snap
---
source: tests/snapshot_expansion_tests.rs
expression: staged
---
{
  "root": "/project",
  "mode": "staged",
  "include": [
    "**/*.rs"
  ],
  "exclude": [
    "target/**"
  ]
}
